# 02-trees

./: Datatypes.hs  Foldr.hs  Kata20.hs  TreeFolds.hs  cis552-trees.cabal
