cabal-version:       >=1.10
name:                cis552-trees
version:             0.1.0.0
synopsis:            Class materials from CIS 552, UPenn
description:         Datatypes and Trees
bug-reports:         cis552@cis.upenn.edu
license:             MIT
license-file:        LICENSE
maintainer:          sweirich@cis.upenn.edu
-- copyright:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library 
  exposed-modules:     Datatypes
                       Foldr
                       Kata20
  build-depends:       base >=4.13 && <4.14
                       , HUnit >= 1.6
                       , dlist
  default-language:    Haskell2010
  ghc-options:         -Wno-type-defaults -Wincomplete-patterns

